new_stylesheet.css
@charset "utf-8";
/* CSS Document */

/* global */
* {
	font-family: Segoe UI, sans-serif;
}

body {
	margin: 0;
	padding: 0;
	background-color: #E9E9E9;
}

ul {
	padding: 0px;
	margin: 0px;
}

li {
	list-style: none;
}

.sectionheader {
	margin-bottom: 12px;
	font-weight: 600;
}

/* stories */

.story {
	transition: 400ms;
	float: left;
	text-align: left;
	overflow: inherit;
	width: 32%;
	padding: 0 0 0 0;
	margin-right: 12px;
	margin-bottom: 20px;
	background-color: white;
	box-shadow: -0px 6px 12px -6px #AAAAAA;
}

.story h3, .story p {
	padding-right: 12px;
	padding-left: 12px;
	
}

.story:hover {
	transition: 400ms;
	background-color: white;
	transform: translate(0,-5px);
	box-shadow: -0px 6px 32px -6px #555555;
}

.story h3 {
	margin-top: 4px;
	margin-bottom: 2px;
	font-weight: 600;
}

.story p{
	margin: 0 0 0 0;
	padding-bottom: 12px;
}

#stories {
	margin-top: 20px;
}

/* joinAd */

#joinAd {
	background-color: #565CA7;
	margin-top: 20px;
	padding: 0;
}

#joinAd h5 {
	font-size: 17px;
	font-weight: 600;
	margin-top: 52px;
	margin-bottom: 0px;
}

#joinAd h2 {
	font-size: 52px;
	font-weight: 300;
	text-transform: uppercase;
	margin: 0 0 0 0;
}

#joinAd h3 {
	font-size: 20px;
	font-weight: 500;
	margin-top: 0px;
	margin-bottom: 52px;
}

#joinAd a {
	color: white;
	text-decoration: none;
	transition: color 0.3s;
}

#joinAd a:hover {
	color: #656BAF;
}


#joinAd * {
	color: white;
}

/* footer */

#footer {
	background-color: #2E2E2E;
	color: white;
}

/* header */

.headercontainer{
	width: 80%;
	margin:auto;
	overflow:hidden;
}

header {
	background: #565CA7;
	color: white;
	width: 100%;
	margin: auto;
	padding-top: 30px;
	min-height: 70px;
}

header #branding {
	float: left;
}

header #branding h1 {
	margin: 0;
}

header nav {
	float: right;
	margin-top: 12px;
}

header a{
	color: #D7D7D7;
	text-decoration: none;
	text-transform: uppercase;
	font-size: 16px;
	transition: 300ms;
}

header .current a{
	font-weight: bolder;
	color: white;
}

header a:hover {
	color: #EBEBEB;
	font-weight: bold;
	transition: 300ms;
}

header li {
	float: left;
	display: inline;
	padding: 0 24px 0 24px;
}


/* home page */

.coverimg {
	width: 100%;
	height: 100%;
	margin-right: 40px;
}

.homecontainer{
	width: 82%;
	margin: auto;
	overflow: hidden;
}

.homecontainer a {
	color: black;
	text-decoration: none;
	transition: color 0.3s;
}

.homecontainer a:hover {
	color: #656BAF;
}

/* homepage -  event */

.event {
	transition: 400ms;
	padding-bottom: 12px;
	float: left;
	text-align: left;
	width: 24%;
	padding: 0 0 8 0;
	margin-bottom: 12px;
	margin-right: 12px;
	background-color: white;
	box-shadow: -0px 6px 12px -6px #AAAAAA;
}

.event:hover {
	transition: 400ms;
	background-color: white;
	transform: translate(0,-5px);
	box-shadow: -0px 6px 20px -6px #555555;
}

.event h3 {
	margin: 0;
	margin-left: 4px;
	margin-top: 8px;
	padding-top: 8px;
	padding-left: 12px;
	font-weight: 600;
}

.event p{
	margin: 0 0 0 0;
	padding-left: 16px;
	padding-bottom: 8px;
}

/* all stories page */

.storiescontainer {
	width: 80%;
	margin: auto;
	overflow: hidden;
}

.storiescontainer a {
	color: black;
	text-decoration: none;
	transition: color 0.3s;
	font-size: 12px;
}

.storiescontainer a:hover {
	color: #656BAF;
}

.storiescontainer a p {
	margin-top: 26px;
	margin-bottom: 0;
}

.storiescontainer .sectionheader {
	margin-top: 4px;
}

/* rules page */

#rulespageheader {
	background-color: #424781;
	color: white;
	padding-bottom: 12px;
}

.rulescontainer {
	width: 80%;
	margin: auto;
	overflow: hidden;
}

.rulescontainer h1 {
	font-weight: 500;
	font-size: 24px
}

.rulescontainer h2 {
	font-weight: 500;
	font-size: 22px;
	margin-top: 30px;
}

table td, th, tr{
	padding: 12px;
	border-style: solid;
}

table {
	margin-bottom: 36px;
}

th {
	text-align: left;
}

/* feedback page */

#feedbackpageheader {
	background-color: #424781;
	color: white;
	padding-bottom: 12px;
}

#feedbackpageheader h1 {
	font-size: 40px;
	font-weight: 300;
	margin-top: 100px;
	margin-bottom: 12px;
	padding: 0;
}

#feedbackcontent {
	width: 80%;
	margin: auto;
	overflow: hidden;
	margin-top: 12px;
}

#feedbackcontent form input {
	margin-bottom: 12px;
	margin-top: 6px;
	width: 98%;
	max-width: 320px;
}

#feedbackcontent form textarea {
	margin-top: 6px;
	width: 98%;
	min-height: 80px;
	margin-bottom: 18px;
}

#feedbackcontent form .button {
	width: 120px;
	margin-right: 12px;
	background-color: #424781;
	border: none;
	color: white;
	height: 32px;
	transition: 200ms;
}

#feedbackcontent form .button:hover {
	transition: 200ms;
	background-color: #434882;
	box-shadow: -0px 6px 16px -6px #666666;
	transform: translate(0, -1px);
}

.feedbackcontainer p {
	font-size: 20px;
}

/* about page */

.aboutclubcontainer {
	width: 80%;
	overflow: hidden;
	margin: auto;
	color: white;
}

.aboutclubcontainer p {
	margin-top: 0;
	margin-bottom: 32px;
	font-size: 17px;
}

.aboutclubcontainer h1 {
	margin-bottom: 8px;
	margin-top: 32px;
	font-size: 24px;
}

#aboutclubsection {
	background-color: #5359A2;
	margin: 0;
}

#statements {
	background-color: #434882;
	overflow: hidden;
}

#statementcontainer #vision1 h1, #mission1 h1, #objective1 h1 {
	margin-right: 24px;
	margin-top: 40px;
	font-size: 28px;
}

#statementcontainer #vision2 p, #mission2 p, #objective2 p {
	margin-top: 4px;
	font-size: 32px;
	font-family: Times New Roman, serif;
}

#vision1 {
	grid-area: vision1;
}

#vision2 {
	grid-area: vision2;
}

#mission1 {
	grid-area: mission1;
}

#mission2 {
	grid-area: mission2;
}

#objective1 {
	grid-area: objective1;
}

#objective2 {
	grid-area: objective2;
}

.people {
	float: left;
	text-align: left;
	overflow: inherit;
	width: 32%;
	padding: 0 0 0 0;
	margin-right: 12px;
	margin-bottom: 20px;
	
}

.people h3, .people p {
	padding-right: 12px;
	padding-left: 12px;
	
}

.people h3 {
	margin-top: 4px;
	margin-bottom: 2px;
	font-weight: 600;
}

.people p{
	margin: 0 0 0 0;
	padding-bottom: 12px;
}


#statementcontainer {
	display: grid;
	width: 60%;
	overflow: hidden;
	margin: auto;
	margin-top: 40px;
	margin-bottom: 40px;
	color: white;
	
	grid-template-areas:
		"vision1 vision2"
		"mission1 mission2"
		"objective1 objective2";
}

#keypeople h1 {
	font-size: 24px;
	margin-bottom: 8px;
	margin-top: 32px;
}

/* contact info */

.contaccontainer {
	width: 80%;
	margin: auto;
	overflow: hidden;
	padding-bottom: 24px;
}

#contactBar h3 {
	margin-top: 0;
	margin-bottom: 0;
	font-size: 24px;
}

#contactBar p {
	margin-top: 0;
	margin-bottom: 8px;
}

/* Contact Us */

#feedbackOption {
	width: 100%;
	margin: auto;
	overflow: hidden;
	
}

.feedbackType {
	margin-bottom: 24px;
	margin-right: 24px;
	color: white;
	overflow: hidden;
	width: 40%;
	height: 120px;
	max-width: 400px;
	background-color: #5359A2;
	float: left;
	text-align: left;
	transition: 300ms;
	box-shadow: -0px 6px 12px -6px #AAAAAA;
}

#feedbackOptions a {
	text-decoration: none;
}

.feedbackType:hover {
	background-color: #434882;
	transform: translate(0, -2px);
	box-shadow: -0px 6px 16px -6px #666666;
}

.feedbackType h1 {
	margin-top: 72px;
	margin-bottom: 20px;
	margin-left: 24px;
	font-size: 24px;
	font-weight: 300;
}

/* global media query */

@media (max-width: 800px) {
	header #branding,
	header nav,
	header nav li {
		float: none;
		text-align: center;
		width: 100%;
	}
	
	#eventSection .event,
	#stories .story ,
	#keypeople .story{
		float: none;
		text-align: left;
		width: 100%;
	}
	
	#statementcontainer {
		display: grid;
		width: 80%;
		overflow: hidden;
		color: white;
		padding-bottom: 16px;
		margin: auto;
		grid-template-areas:
			"vision1"
			"vision2"
			"mission1"
			"mission2"
			"objective1"
			"objective2";
}
	
	#statementcontainer #vision1 h1, #mission1 h1, #objective1 h1 {
		font-size: 24px;
		margin-top: 24px;
		margin-bottom: 0;
	}

	#statementcontainer #vision2 p, #mission2 p, #objective2 p {
		font-size: 20px;
		margin-top: 0;
		margin-bottom: 12px;
		font-family: Times New Roman, serif;
	}
	
	#statements {
		padding-bottom: 20px;
		padding-top: 20px;
	}
	
	header {
		padding-bottom: 20px;
	}
}

